--- a/ResiliaPet.html
+++ b/ResiliaPet.html
@@ -1,29 +1,64 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
-    <title>Menu Adote Aqui</title>
-    <link rel=stylesheet type=text/css href="ResiliaPet.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./ResiliaPet.css">
+    <title>Document</title>
 </head>
-
+<body>
+    
+</body>
+</html>
 <body>
     <header>
         <div class="logo">
-        Adote Aqui!
+            <h1>ADOTE AQUI!</h1>
         </div>
-            <div class="menu">
-                <a href="">
-                    <h2>HOME</h2>
-                </a>       
-                <a href="">
-                    <h2>SOBRE</h2>
-                </a> 
-                <a href="">
-                    <h2>CONTATO</h2>
-                </a>
+        <div class="menu">
+            <a href="#">
+                <h2>HOME</h2>
+            </a>       
+            <a href="#">
+                <h2>SOBRE</h2>
+            </a> 
+            <a href="#">
+                <h2>CONTATO</h2>
+            </a>
         </div>
     </header>
+    <main>
+        <di class="imagens">
+            <img src="./Imagens/Cachorro1.jpg" alt="Bulldog Ingles olhando para cima">
+            <img src="./Imagens/Cachorro2.jpg" alt="Cachorro deitado com lingua para fora">
+            <img src="./Imagens/Cachorro3.jpg" alt="Cachorro com caneca">
+            <img src="./Imagens/Gato1.jpeg" alt="Gato deitado no tapete">
+        </di>
+        <div class="imagens">
+            <img src="./Imagens/Cachorro4.jpg" alt="Pug com camiseta">
+            <img src="./Imagens/Cachorro5.jpg" alt="Cachorro olhando pro lado">
+            <img src="./Imagens/Cachorro6.jpg" alt="Cachorro correndo">
+            <img src="./Imagens/Gato3.jpg" alt="Gato em baixo do tapete">
+        </div>
+        <div class="imagens"> 
+            <img src="./Imagens/Cachorro7.jpg" alt="Cachorro na praia">
+            <img src="./Imagens/Cachorro8.jpg" alt="Cachorro com oculos">
+            <img src="./Imagens/Cachorro9.jpeg" alt="Cachorro triste">
+            <img src="./Imagens/Gato2.jpg" alt="Gato com lenço sorrindo">
+        </div>
+        <div class="imagens">  
+            <img src="./Imagens/Cachorro10.jpeg" alt="Golden com carangueijo na boca">
+            <img src="./Imagens/Cachorro11.jpeg" alt="Labrador preto sentado na praia">
+        </div>
+    </main>     
+    <footer>
+        <p>Todos os direitos reservados</p>
+    </footer>
+
+
 </body>
+
 
 </html>
