Correção do titulo da pagina

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./ResiliaPet.css">
-    <title>Adote Aqui!cADASTRO</title>
+    <title>Adote Aqui!</title>
 </head>
 <body>
     
@@ -14,7 +14,7 @@
 </html>
 <body>
     <header>
-        <div class="logo">
+        <div id="logo">
             <h1>ADOTE AQUI!</h1>
         </div>
         <div class="menu">
